2008-12-05  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelDecoration,
	Style.LabelOutlineColor, and Style.LabelOutlineWidth

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelPosition and
	Style.LabelPixelOffset

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelFontEmSize

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: center label

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Label properties to Style

	* Projection/ProjFourWrapper.cs: preserve feature properties in point
	transform

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs:
	* Data/IFeatureSource.cs:
	* Data/SimpleFeatureSource.cs:
	* Data/Shapefile/Shapefile.cs: add GetFeatures overloads for labels

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Layer.cs:
	* Feature.cs:
	* Xml/Serialization/MapSerializer.cs: add Layer.LabelField and
	Feature.LabelFieldValue

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Data/KeyholeMarkupLanguage.cs:
	* Xml/Serialization/MapSerializer.cs: add FillStyle

2008-12-04  Scott Ellington  <scott.ellington@gmail.com>

	* Web/TileProvider.cs: add virtualearth support

2008-12-02  Scott Ellington  <scott.ellington@gmail.com>

	* Point.cs:
	* Rectangle.cs: cleanup op overrides

2008-12-01  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs: icons and tessellate

2008-12-01  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs: support styles in kml

	* Layer.cs: