@@ -2,6 +2,12 @@
 
 	* Style.cs:
 	* Drawing/MapDrawer.cs:
+	* Xml/Serialization/MapSerializer.cs: add Style.LabelAngle
+
+2008-12-05  Scott Ellington  <scott.ellington@gmail.com>
+
+	* Style.cs:
+	* Drawing/MapDrawer.cs:
 	* Xml/Serialization/MapSerializer.cs: add Style.LabelDecoration,
 	Style.LabelOutlineColor, and Style.LabelOutlineWidth
 
